# directx_opengl_viewer

./: .gitignore
OpenGLViewer/: CMakeLists.txt  main.cpp  readme.md
OpenGLViewer/headers/buffer/: GeometryBuffer.hpp  PosNormalGeometryBuffer.hpp  UniformBuffer.hpp
OpenGLViewer/headers/camera/: Camera.hpp  OrbitCamera.hpp
OpenGLViewer/headers/geometry/: Geometry.hpp
OpenGLViewer/headers/input/: MouseState.hpp
OpenGLViewer/headers/light/: AmbientLight.hpp  DirectionalLight.hpp  PointLight.hpp
OpenGLViewer/headers/loaders/: FileLoader.hpp  ImageLoader.hpp  TextureLoader.hpp
OpenGLViewer/headers/material/: DebugNormalMaterial.hpp  MaterialData.hpp  ReflectiveMaterial.hpp  RefractionMaterial.hpp  StandardMaterial.hpp  UnlitMaterial.hpp
OpenGLViewer/headers/mesh/: Mesh.hpp  ReflectiveMesh.hpp  RefractionMesh.hpp  UnlitMesh.hpp
OpenGLViewer/headers/render_target/: RenderTarget.hpp
OpenGLViewer/headers/renderer/: Renderer.hpp
OpenGLViewer/headers/scene/: SceneLights.hpp
OpenGLViewer/headers/shader/: DebugNormalShader.hpp  ReflectiveMaterialShader.hpp  RefractionMaterialShader.hpp  Shader.hpp  SkyboxShader.hpp  StandardMaterialShader.hpp  UnlitMaterialShader.hpp
OpenGLViewer/headers/skybox/: Skybox.hpp
OpenGLViewer/shaders/: DebugNormalFS.glsl  DebugNormalGS.glsl  DebugNormalVS.glsl  ReflectiveMaterialFS.glsl  ReflectiveMaterialVS.glsl  RefractionMaterialFS.glsl  SkyboxFS.glsl  SkyboxVS.glsl  StandardMaterialFS.glsl  StandardMaterialFShader.glsl  StandardMaterialVS.glsl  StandardMaterialVShader.glsl  UnlitMaterialFS.glsl  UnlitMaterialVS.glsl
OpenGLViewer/src/camera/: Camera.cpp  (+1 more)
(+165 files in other folders)
